--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
     width: 250px;   
     height: 600px;
   }
+  .stars {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 112%;
+    z-index: 3; 
+    pointer-events: none; 
+  }
 
   .strip-frame {
     position: absolute;
@@ -78,7 +87,7 @@
     object-fit: cover;
     border-radius: 2px;
     background: #111;
-    z-index: 10;
+    z-index: 2;
   }
 
   #slot1 { top: 17px; }   
@@ -100,9 +109,8 @@
     font-size: 18px;
     cursor: pointer;
     color: white;
-    font-family: "Brush Script MT", cursive; /* font change */ 
+    font-family: "Brush Script MT", cursive;  
   }
-  /*Button colors*/
   .start { 
     background: #70c5d3;
   }
@@ -126,13 +134,14 @@
     
     
     <div class="strip-container">
-        <div class="photos" id="photo-strip">
+      <img src="2x6.png" alt="Photo Frame" class="strip-frame"> 
+      <div class="photos" id="photo-strip">
           <img id="slot1" alt="Photo 1">
           <img id="slot2" alt="Photo 2">
           <img id="slot3" alt="Photo 3">
           <img id="slot4" alt="Photo 4">
         </div>
-        <img src="2x6.png" alt="Photo Frame" class="strip-frame"> 
+        <img src="stars.png" alt="Stars" class="stars">
       </div>
   </div>
 
@@ -216,37 +225,46 @@
   let frame = new Image();
   frame.src = "2x6.png";
 
+  let stars = new Image();
+  stars.src = "stars.png";
+
   frame.onload = () => {
-    let totalLoads = capturedImages.length * 2; 
-    let loaded = 0;
+    stars.onload = () => {
+      let totalLoads = capturedImages.length * 2;
+      let loaded = 0;
 
-    for (let s = 0; s < 2; s++) { 
-      let xOffset = s * stripWidth;
-      fctx.drawImage(frame, xOffset, 0, stripWidth, stripHeight);
+      for (let s = 0; s < 2; s++) {
+        let xOffset = s * stripWidth;
+        fctx.drawImage(frame, xOffset, 0, stripWidth, stripHeight);
 
-      capturedImages.forEach((src, i) => {
-        let img = new Image();
-        img.src = src;
-        img.onload = () => {
-          let photoW = 502;
-          let photoH = 351.5;
-          let spacing = 30;
-          let yOffset = 47 + i * (photoH + spacing);
-          fctx.drawImage(img, xOffset + 46, yOffset, photoW, photoH);
+        capturedImages.forEach((src, i) => {
+          let img = new Image();
+          img.src = src;
+          img.onload = () => {
+            let photoW = 502;
+            let photoH = 351.5;
+            let spacing = 30;
+            let yOffset = 47 + i * (photoH + spacing);
 
-          loaded++;
-          if (loaded === totalLoads) {
-            callback(); 
-          }
-        };
-      });
-    }
+            fctx.drawImage(img, xOffset + 46, yOffset, photoW, photoH);
 
+            loaded++;
+            if (loaded === totalLoads) {
+              fctx.drawImage(stars, 0, 0, stripWidth, stripHeight);         
+              fctx.drawImage(stars, stripWidth, 0, stripWidth, stripHeight); 
 
-    fctx.fillStyle = "#888";
-    fctx.fillRect(stripWidth - 1, 0, 2, stripHeight);
+              fctx.fillStyle = "#888";
+              fctx.fillRect(stripWidth - 1, 0, 2, stripHeight);
+
+              callback();
+            }
+          };
+        });
+      }
+    };
   };
 }
+
 
 function printStrip() {
   buildFinalStrip(() => {
@@ -266,5 +284,7 @@ function printStrip() {
   </script>
 </body>
 </html>
+
+
 
 
