--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   .photos img {
     position: absolute;
     left: 18.8px;         
-    width: 210px;       
+    width: auto;       
     height: 132px;      
     object-fit: cover;
     border-radius: 2px;
@@ -284,3 +284,4 @@ function printStrip() {
   </script>
 </body>
 </html>
+
